syntax = 'proto3';


message Empty {

}

message QueryBuilder {
    // Pagination queries
    optional int32 page = 1;
    optional int32 limit = 2;
    // Sord queries
    optional string order_by = 3;
    // Custome rep queries
    optional string v = 4;
}

message RequestContext {
    optional string userId = 1;
    optional string organizationId = 2;
}

message GetRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional RequestContext context = 3;
}

message DeleteRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional bool purge = 3;
    optional RequestContext context = 4;

}
