syntax = 'proto3';

import "common.message.proto";


message Amenity {
    string id = 1;
    string name = 2;
    optional string organizationId = 3;
    Icon icon = 4;
    bool voided = 5;
    string createdAt = 6;
    string updatedAt = 7;
    // repeated PropertyAttribute assignedProperties = 8; // TODO: define
}

message QueryAmenityRequest {
    QueryBuilder queryBuilder = 1;
    optional string search = 2;
    optional string organizationId = 3;
    optional bool includeVoided = 4;
}

message QueryAmenityResponse {
    repeated Amenity data = 1;
    map<string, string> metadata = 2; 
}

message CreateAmenityRequest {
    QueryBuilder queryBuilder = 1;
    string name = 2;
    optional string organizationId = 3;
    Icon icon = 4;
}
message UpdateAmenityRequest {
    QueryBuilder queryBuilder = 1;
    optional string name = 2;
    optional Icon icon = 3;
    string id = 4;

}
message GetAmenityRequest {
    QueryBuilder queryBuilder = 1;
    string id = 2;
}
message GetAmenityResponse {
    Amenity data = 1;
    map<string, string> metadata = 2; 
}
message DeleteAmenityRequest {
    QueryBuilder queryBuilder = 1;
    string id = 2;
    optional bool purge = 3;
}